Replaced loading and not available image and removed search from nav

--- a/templates/book.html
+++ b/templates/book.html
@@ -395,7 +395,7 @@ header img {
     <a href="javascript:history.back();" class="back-arrow" aria-label="Go Back">← Back</a>
     <div class="book-detail">
         <div class="book-cover-container">
-            <img id="book-cover" class="book-cover" src="/static/images/loading-image.jpg" alt="Book Cover">
+            <img id="book-cover" class="book-cover" src="/static/images/image-loading.svg" alt="Book Cover">
         </div>
         <div class="book-info">
             <h1 id="book-title" class="book-title">Loading title…</h1>
@@ -525,7 +525,7 @@ header img {
         })
         .then(async (book) => {
           coverEl.src = (!book.img_src || book.img_src === "Missing") 
-            ? "/static/images/default-book.jpg" 
+            ? "/static/images/image-not-available.svg" 
             : book.img_src;
 
           titleEl.textContent = book.title  || "Unknown Title";
@@ -689,7 +689,7 @@ function showConfirmation(message, isError = false) {
       a.className = "card";
 
       a.innerHTML = `
-        <img src="${(!b.img_src || b.img_src === 'Missing') ? '/static/images/default-book.jpg' : b.img_src}" alt="${b.title}">
+        <img src="${(!b.img_src || b.img_src === 'Missing') ? '/static/images/image-not-available.svg' : b.img_src}" alt="${b.title}">
         <div class="card-content">
           <p class="card-title">${b.title}</p>
           <p class="card-authors">${b.authors || ""}</p>
